getting some basic styling done

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
-    {{{ body }}}
+    <header>
+        <a href='/'><h1>The Tech Blog</h1></a>
+        <nav>
+            <a href="/dashboard">Dashboard</a>
+            <a href="/login">Login</a>
+        </nav>
+    </header>
+    {{{body}}}
 </body>
 </html>
