--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,1 @@
-<header>
-    <h1>Tech Blog</h1>
-</header>
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam facere, nam quidem qui veniam vitae inventore quae minima reiciendis est molestias ipsum quam nihil rerum officia commodi ullam consectetur minus?
