basic login page setup

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,29 @@
-login page
+<form class="login-form">
+    <span>Login below!</span>
+    <div>
+        <label for="login-username">Username:</label>
+        <input type="text" id="login-username" />
+    </div>
+    <div>
+        <label for="login-password">Password:</label>
+        <input type="password" id="login-password" />
+    </div>
+    <div>
+        <button type="submit">Login</button>
+    </div>
+</form>
+
+<form class="signup-form">
+    <span>Don't have an account yet? Sign up here!</span>
+    <div>
+        <label for="signup-username">Username:</label>
+        <input type="text" id="signup-username" />
+    </div>
+    <div>
+        <label for="signup-password">Password:</label>
+        <input type="password" id="signup-password" />
+    </div>
+    <div>
+        <button type="submit">Sign Up</button>
+    </div>
+</form>
