--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,35 @@
+* {
+    margin: 0;
+}
+
 header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #C01EFF;
+    padding: 20px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+nav a {
+    padding: 20px;
+}
+
+body {
+    background-color: #F0CCFD;
+}
+
+form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 50px;
+}
+
+form div, span {
+    padding: 10px;
 }
