added password confirm check

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,6 +24,12 @@
         <input type="password" id="signup-password" />
     </div>
     <div>
+        <label for="signup-confirm">Confirm password:</label>
+        <input type="password" id="signup-confirm" />
+    </div>
+    <div>
         <button type="submit">Sign Up</button>
     </div>
 </form>
+
+<script src="/javascript/login.js"></script>
