added logout button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,9 +12,12 @@
         <a href='/'><h1>The Tech Blog</h1></a>
         <nav>
             <a href="/dashboard">Dashboard</a>
+            <button id="logout">Logout</button>
             <a href="/login">Login</a>
         </nav>
     </header>
     {{{body}}}
+
+    <script src="/javascript/logout.js"></script>
 </body>
 </html>
