--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,13 +11,20 @@ header {
 }
 
 a {
+    padding: 20px;
+    font-size: 18px;
     text-decoration: none;
     color: black;
 }
 
-nav a {
+#logout {
+    background: none;
+    border: none;
+    padding: 0;
+    text-decoration: none;
+    font-size: 16px;
     padding: 20px;
-    font-size: 18px;
+    cursor: pointer;
 }
 
 body {
