--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,13 +31,29 @@ body {
     background-color: #F0CCFD;
 }
 
-form {
+.login-form, .new-post-form, .signup-form {
     display: flex;
     align-items: center;
     flex-direction: column;
     padding: 50px;
 }
 
-form div, span {
+.login-form div, span, .signup-form div {
     padding: 10px;
+}
+
+.new-post-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border: 2px solid black;
+}
+
+.new-post-container h1, label, button {
+    margin: 10px;
+}
+
+.new-post-header {
+    background-color: #C01EFF;
+    border-bottom: 2px solid black;
 }
