--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,1 +1,29 @@
-dashboard page
+<section>
+    <form class="new-post-form">
+        <div class="new-post-container">
+            <div class="new-post-header">
+                <h1>Submit new post</h1>
+            </div>
+            <label for="post-title">Title</label>
+            <input type="text" id="post-title" name="post-title" />
+            <label for="post-content">Content</label>
+            <textarea id="post-content" name="post-content"></textarea>
+            <button type="submit">Post</button>
+        </div>
+    </form>
+</section>
+
+{{#if posts.length}}
+<section>
+    <h2>Your Posts</h2>
+    <ol>
+        {{#each posts as |post|}}
+        <li>
+            {{> post-info post}}
+            <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+        </li>
+        {{/each}}
+    </ol>
+</section>
+{{/if}}
+<script src="/javascript/post.js"></script>
