--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,13 +14,13 @@
 </section>
 
 {{#if posts.length}}
-<section>
+<section class="dashboard-posts">
     <h2>Your Posts</h2>
     <ol>
         {{#each posts as |post|}}
         <li>
             {{> post-info post}}
-            <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+            {{!-- <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a> --}}
         </li>
         {{/each}}
     </ol>
