--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,13 +11,18 @@
     <header>
         <a href='/'><h1>The Tech Blog</h1></a>
         <nav>
+            {{#if loggedIn}}
             <a href="/dashboard">Dashboard</a>
             <button id="logout">Logout</button>
+            {{else}}
             <a href="/login">Login</a>
+            {{/if}}
         </nav>
     </header>
     {{{body}}}
 
+    {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
+    {{/if}}
 </body>
 </html>
