--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -19,7 +19,12 @@
     <ol>
         {{#each posts as |post|}}
         <li>
-            {{> post-info post}}
+            <article class="single-post">
+                <h4>{{title}}</h4>
+                <div>
+                    by {{user.username}} on {{format_date created_at}}
+                </div>
+            </article>
         </li>
         {{/each}}
     </ol>
