--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,10 @@
             {{/if}}
         </nav>
     </header>
-    {{{body}}}
+
+    <main>
+        {{{body}}}
+    </main>
 
     {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
