--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -18,14 +18,16 @@
     <h2>Your Posts</h2>
     <ol>
         {{#each posts as |post|}}
-        <li>
-            <article class="single-post">
-                <h4>{{title}}</h4>
-                <div>
-                    by {{user.username}} on {{format_date created_at}}
-                </div>
-            </article>
-        </li>
+        <a href="/post/{{id}}">
+            <li>
+                <article class="single-post">
+                    <h4>{{title}}</h4>
+                    <div>
+                        by {{user.username}} on {{format_date created_at}}
+                    </div>
+                </article>
+            </li>
+        </a>
         {{/each}}
     </ol>
 </section>
