--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,7 +71,7 @@ ol {
     padding: 0px;
 }
 
-ol li {
+ol li, .edit li {
     list-style-type: none;
 }
 
@@ -123,4 +123,20 @@ ol li {
 
 .comments span {
     margin: 5px;
+}
+
+.edit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px;
+}
+
+.edit input {
+    width: 300px;
+}
+
+.edit textarea {
+    width: 400px;
+    height: 100px;
 }
