--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -13,7 +13,10 @@
 {{#if loggedIn}}
 <form class="comment-form">
     <textarea id="comment-body"></textarea>
-    <button type="submit">Add comment</button>
+    <div>
+        <button type="submit">Add comment</button>
+        <button id="edit">Edit post</button>
+    </div>
 </form>
 {{/if}}
 
