fixed minor bug

--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -14,7 +14,7 @@
 <form class="comment-form">
     <textarea id="comment-body"></textarea>
     <div>
-        <button type="submit">Add comment</button>
+        <button>Add comment</button>
         <button id="edit">Edit post</button>
     </div>
 </form>
