--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,20 +1,20 @@
 <div class="opener">
     <h1>Welcome to the Tech Blog!</h1>
-        <span>Here at the Tech Blog we post about everything and anything tech related!</br>
-        Don't see any posts yet? Login to create an account and join the conversation!</span>
+        <span>Here at the Tech Blog we're passionate about anything and everything tech related.</br>
+        Join the conversation by creating an account, making posts, or commenting on any post that catches your eye.</span>
 </div>
 
 <ol>
     {{#each posts as |post|}}
-    <a href="/post/{{id}}">
-        <li>
+    <li class="homepage-post">
+        <a href="/post/{{id}}">
             <article class="main-page">
                 <h3>{{title}}</h3>
                 <div>
                     by {{user.username}} on {{format_date created_at}}
                 </div>
             </article>
-        </li>
-    </a>
+        </a>
+    </li>
     {{/each}}
 </ol>
