--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,9 +4,9 @@
             <div class="new-post-header">
                 <h1>Submit new post</h1>
             </div>
-            <label for="post-title">Title</label>
+            <label for="post-title"><b>Title</b></label>
             <input type="text" id="post-title" name="post-title" />
-            <label for="post-content">Content</label>
+            <label for="post-content"><b>Content</b></label>
             <textarea id="post-content" name="post-content"></textarea>
             <button type="submit">Post</button>
         </div>
