--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,5 +1,5 @@
 <li>
-    <article class="main-page">
+    <article class="single-main">
         <h3>{{post.title}}</h3>
         <div>
             by {{post.user.username}} on {{format_date post.created_at}}
@@ -20,12 +20,14 @@
 </form>
 {{/if}}
 
-{{#each post.comments as |comment|}}
-    <div class="comments">
-        <span>{{comment.comment_text}}</span>
-        <span><b>{{comment.user.username}}, {{format_date comment.created_at}}</b></span>
-    </div>
-{{/each}}
+<div class="comments-container">
+    {{#each post.comments as |comment|}}
+        <div class="comments">
+            <span>{{comment.comment_text}}</span>
+            <span><b>{{comment.user.username}}, {{format_date comment.created_at}}</b></span>
+        </div>
+    {{/each}}
+</div>
 
 
 {{#if loggedIn}}
